--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,3 +101,8 @@ header.page-header {
   justify-content: space-between;
   align-items: center;
 }
+
+.tt-wrapping {
+  overflow-wrap: break-word;
+  height: auto;
+}
